Add twitter to tournament
